--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,24 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
-  <link rel="icon" href="img/favicon.png" type="image/png">
-
+  <link rel="apple-touch-icon" sizes="57x57" href="img/fav/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="img/fav/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="img/fav/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="img/fav/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="img/fav/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="img/fav/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="img/fav/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="img/fav/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="img/fav/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/fav/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/fav/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="img/fav/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/fav/favicon-16x16.png">
+  <link rel="manifest" href="img/fav/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/fav/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   <title>Portfolio/Портфоліо</title>
 </head>
 
@@ -20,7 +35,7 @@
       <a href="" class="nav__item">Contacts</a>
     </nav>
     <div class="header-info">
-      <p class="header-title">Homeniuk Vladyslav</p>
+      <p class="header-title"><span>Homeniuk</span> <span>Vladyslav</span></p>
     </div>
     <video autoplay muted loop preload="auto" class="video-bg">
       <!-- <source type="video/webm" src="img/bg-video.mp4"> -->
@@ -36,22 +51,36 @@
           <div class="item__title">Doroshenko-school</div>
           <p class="item__desc">Школа англійської мови</p>
         </a>
-        <a class="item" href="http://velesservices.com/" target="_blank">
+        <a class="item" href="https://velesservices.com/" target="_blank">
           <div class="item__img"><img src="img/veles.jpg" alt=""></div>
           <div class="item__title">VELES SERVICES KFT</div>
           <p class="item__desc">Логістична компанія</p>
         </a>
-        <a class="item" href="https://raent.xyz/" target="_blank">
+        <a class="item" href="https://chornohora.raent.xyz/" target="_blank">
           <div class="item__img"><img src="img/chornohora.jpg" alt=""></div>
           <div class="item__title">Chornohora Mountain Range</div>
           <p class="item__desc">інтерактивний сайт про марштрут через Чорногірський хребет в Карпатах</p>
         </a>
-        <a class="item" href="https://raent25.github.io/Gvardis/dist/index.html" target="_blank">
+        <a class="item" href="https://gvardis.raent.xyz/" target="_blank">
           <div class="item__img"><img src="img/gvardis.jpg" alt=""></div>
           <div class="item__title">Gvardis</div>
           <p class="item__desc">Охоронна фірма</p>
         </a>
+        <a class="item" href="https://honey.raent.xyz/" target="_blank">
+          <div class="item__img"><img src="img/honey.jpg" alt=""></div>
+          <div class="item__title">Мед як мед</div>
+          <p class="item__desc">Сайт візитка з продажу меду</p>
+        </a>
+        <a class="item" href="https://snake.raent.xyz/" target="_blank">
+          <div class="item__img"><img src="img/snake.jpg" alt=""></div>
+          <div class="item__title">Snake game</div>
+          <p class="item__desc">Гра по мотивах легинданої аркади з телефонів Nokia</p>
+        </a>
+        
       </div>
+    </div>
+    <div class="title-wrap">
+      <div class="title">Skills/Навички</div>
     </div>
     <div class="skills">
       <div class="skill">
@@ -113,8 +142,12 @@
 
     </div>
   </main>
-  <footer>
-    <div class="image"></div>
+  <footer class="footer">
+    <a class="footer-link" href="tel:+380635926385">+380635926385</a>
+    <a class="footer-link" href="https://t.me/vladyslav_homeniuk"><i class="bi bi-telegram"></i></a>
+    <a class="footer-link" href="https://www.instagram.com/vlad_homeniuk/" target="_blank"><i class="bi bi-instagram"></i></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/vladyslav-homeniuk-674267231/" target="_blank"><i class="bi bi-linkedin"></i></a>
+    <a class="footer-link" href="https://github.com/raent25" target="_blank"><i class="bi bi-github"></i></a>
   </footer>
   <script src="https://code.jquery.com/jquery-3.6.1.min.js"></script>
 </body>
